CloudFormation/vpc/vpc-1az-natgw.yaml
---
# Copyright 2019 gbazack
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for deploying 1 Custom VPC consisted of 2 subnets'
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
    - Label:
        default: 'VPC parameters'
      Parameters:
      - subnetcidrBlock1
      - subnetcidrBlock2
      - AvailabilityZones1
Parameters:      
  subnetcidrBlock1:
    Description: 'CidrBlock of subnets - 10.4.subnetcidrBlock1.0/20'
    Type: Number
    Default: 0
    AllowedValues:
      - 0
      - 16
      - 32
      - 48
  subnetcidrBlock2:
    Description: 'CidrBlock of subnets - 10.4.subnetcidrBlock2.0/20'
    Type: Number
    Default: 64
    AllowedValues:
      - 64
      - 80
      - 96
      - 112
  AvailabilityZones1:
    Description: 'List of Availability zones'
    Type: 'AWS::EC2::AvailabilityZone::Name'
    Default: String
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.4.0.0/16'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: 'default'
      Tags:
        - Key: 'Name'
          Value: 'vpc-2sbn'
#Internet Gateway
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: 'Name'
          Value: 'Igw-vpc-2sbn'
#VPC Gateway Attachment
  GatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
#NAT Gateway
  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId:
        Ref: PublicSubnet
      Tags:
        - Key: 'Name'
          Value: 'Ngw-vpc-2sbn'
#Elastic IP
  EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
#Creation of Subnets
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Sub '10.4.${subnetcidrBlock1}.0/20'
      AvailabilityZone:
        Ref: AvailabilityZones1
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'Name'
          Value: 'PublicSubnet'
  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Sub '10.4.${subnetcidrBlock2}.0/20'
      AvailabilityZone:
        Ref: AvailabilityZones1
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'PrivateSubnet'
#RouteTables
  RouteTablePublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: 'Name'
          Value: 'RTpublic-VPC'           
  RouteTablePrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: 'Name'
          Value: 'RTprivate'           
#RouteTable configuration
  RoutePublic:
    DependsOn: GatewayAttachment
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId:
        Ref: RouteTablePublic
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Ref: InternetGateway           
  RoutePrivate:
    DependsOn: GatewayAttachment
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId:
        Ref: RouteTablePrivate
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId:
        Ref: NatGateway           
#Subnet RouteTable Association
  RouteTableAssociationPublic:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: RouteTablePublic
  RouteTableAssociationPrivate:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId:
        Ref: PrivateSubnet
      RouteTableId:
        Ref: RouteTablePrivate
#Network ACL
  NetworkAclPublic:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: 'Name'
          Value: 'nacl-public'
  NetworkAclPrivate:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: 'Name'
          Value: 'nacl-private'
  NetworkAclAssociationPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: PublicSubnet
      NetworkAclId:
        Ref: NetworkAclPublic
  NetworkAclAssociationPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: PrivateSubnet
      NetworkAclId:
        Ref: NetworkAclPrivate
  NetworkAclPublicEntryIn:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId:
        Ref: NetworkAclPublic
      RuleNumber: 100
      Protocol: -1
      RuleAction: Allow
      Egress: true
      CidrBlock: '0.0.0.0/0'
  NetworkAclPrivateEntryOut:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId:
        Ref: NetworkAclPrivate
      RuleNumber: 100
      Protocol: -1
      RuleAction: Allow
      Egress: false
      CidrBlock: '0.0.0.0/0'
Outputs:
  TemplateID:
    Description: 'VPC-1az1 template Id'
    Value: 'vpc/vpc-1az1'
  TemplateVersion:
    Description: 'VPC-1az1 template Version'
    Value: '__VERSION__'
  StackName:
    Description: 'stack name'
    Value: !Sub '${AWS::StackName}'
  AvailabilityZones:
    Description: 'Availability Zones'
    Value: !Ref AvailabilityZones1
    Export:
      Name: !Sub '${AWS::StackName}-AvailabilityZones'
  CidrBlock:
    Description: 'The set of IP addresses for the VPC.'
    Value: !GetAtt 'VPC.CidrBlock'
    Export:
      Name: !Sub '${AWS::StackName}-CidrBlock'
  VPC:
    Description: 'The Custom VPC'
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
  PublicSubnet:
    Description: 'Public subnet.'
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet'
  PrivateSubnet:
    Description: 'Private subnet.'
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet'
  RouteTablePublic:
    Description: 'Public route table'
    Value: !Ref RouteTablePublic
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablePublic'
  RouteTablePrivate:
    Description: 'Private route table'
    Value: !Ref RouteTablePrivate
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablePrivate'
